# quaid

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENCE  MIGRATION.md  Makefile  README.md  build.rs  codecov.yml  decisions.md  phase2_progress.md
.claude/: settings.json  settings.local.json
.config/: nextest.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: CODEOWNERS  RELEASE_CHECKLIST.md  release-assets.txt
.github/agents/: squad.agent.md
.github/workflows/: beir-regression.yml  ci.yml  conversation-memory-benchmarks.yml  docs-ci.yml  docs.yml  main-guardrails.yml  publish-npm.yml  release.yml  weekly-real-model.yml
.squad/: .commit-message.txt  2026-04-13-session-index.md  archival-analysis.json  commit-msg.txt  commit-session.bat  decisions-archive.md  decisions.md  health-2026-05-02T10-47-12.md  health-2026-05-02T20-15-44Z.md  health-2026-05-05T0025.md  health-report-2026-04-29T13-29-11Z.md  health-report-2026-04-29T132911Z.md  health-report-2026-04-29T22-37-20Z.md  health-report-2026-04-30T13-53-46Z.md  health-report-20260429T132911Z.md  health-report-20260429T191910Z.md  health-report-20260430-230757Z.md  health-report-20260430T003031Z.md  health-report-20260430T025740Z.md  health-report-20260430T055538Z.md  health-report-scribe-2026-05-06T000541Z.md  health-report-scribe-2026-05-06T134412Z.md  health-report-scribe-20260429T173623Z.md  health-report-scribe-namespace-isolation-2026-05-02T10-31-04Z.md  health-report-scribe-session-2026-04-30T13-53-46Z-final.md  health-report-scribe-session-2026-04-30T21-53-46Z-final.md  health-report-scribe-session-2026-04-30T21-53-46Z.md  history.md  team.md
.squad/decisions/: merge-summary-2026-04-13.md
.squad/identity/: now.md
.squad/log/: 2026-04-14T01-59-05Z-rust-skill-review.md  2026-04-14T03-38-04Z-phase1-start.md  2026-04-14T03-50-40Z-phase1-db-slice.md  2026-04-14T03-59-44Z-phase1-markdown-slice.md  2026-04-14T04-07-24Z-phase1-command-slice.md  2026-04-14T04-21-54Z-phase1-cli-expansion.md  2026-04-14T04-42-03Z-t18-t19-reconciliation.md  2026-04-14T04-56-03Z-search-embed-query-closeout.md  2026-04-15T02-00-00Z-phase1-resume.md  2026-04-15T02-16-00Z-phase1-complete.md  2026-04-15T051759Z-copilot-review-fixes.md  2026-04-16T04-26-16Z-pr22-review-fixes.md  2026-04-16T05-22-10Z-v020-release-p3-openspec.md  2026-04-16T05-59-18Z-amy-phase3-skills.md  2026-04-29T13-29-11Z-session-close.md  2026-05-06T000541Z-scribe-housekeeping.md  2026-05-06T134412Z-scribe-spawn.md  2026-05-28T03:03:24Z-parser-validation-completion.md
.squad/orchestration-log/: 2026-04-14T01-53-00Z-fry.md  2026-04-14T01-59-05Z-professor.md  2026-04-14T03-38-04Z-bender-val.md  2026-04-14T03-38-04Z-fry-slice.md  2026-04-14T03-38-04Z-leela.md  2026-04-14T03-50-40Z-fry.md  2026-04-14T03-50-40Z-leela.md  2026-04-14T03-59-44Z-scribe.md  2026-04-14T04-07-24Z-bender.md  2026-04-14T04-07-24Z-fry.md  2026-04-14T04-07-24Z-scruffy.md  2026-04-14T04-21-54Z-fry.md  2026-04-14T04-21-54Z-leela.md  2026-04-14T04-42-03Z-bender-search-lane-validation.md  2026-04-14T04-42-03Z-fry-t18-t19-reconcile.md  2026-04-14T04-42-03Z-professor-search-review.md  2026-04-14T04-56-03Z-bender-validation-closeout.md  2026-04-14T04-56-03Z-fry-embed-completion-gated.md  2026-04-14T04-56-03Z-leela-accepted-revision.md  2026-04-14T04-56-03Z-professor-rejection-findings.md  2026-04-15T02-16-00Z-fry.md  2026-04-15T051759Z-fry.md  2026-04-15T051759Z-kif.md  2026-04-16T04-26-16Z-fry.md  2026-04-16T04-26-16Z-professor.md  2026-04-16T05-22-10Z-fry.md  2026-04-16T05-22-10Z-leela.md  2026-04-16T05-59-18Z-amy.md  2026-05-06T000541Z-fry.md  2026-05-06T000541Z-hermes.md  2026-05-06T000541Z-leela.md  2026-05-06T134412Z-Fry.md  2026-05-06T134412Z-Leela.md  2026-05-28T03:03:24Z-Bender.md  2026-05-28T03:03:24Z-Fry.md
.squad/templates/: copilot-instructions.md  coverage-skill.md
benches/: extraction.rs
benchmarks/: README.md  conversation_memory_common.py  dab_section8.py  graph_retrieval.md  locomo_eval.py  longmemeval_adapter.py  prep_datasets.sh  ragas_eval.py  requirements.txt
benchmarks/baselines/: beir.json  conversation_memory.json  section8.json
docs/: CODE_REVIEW.md  MIGRATION.md  contributing.md  fable-review-progress.md  getting-started.md  graph.md  model-cache.md  openclaw-harness.md  operator-guide-daemon.md  quaid-vs-qmd-friction-analysis.md  roadmap.md  roadmap_v3.md  spec.md  temp_IMPL_PLAN.md
openspec/: ROADMAP-FEASIBILITY.md
playground/: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
playground/docs/: future-mcp.md
scripts/: create-labels-and-issues.ps1  install.sh  mini-bench-corpus.mjs  mini-bench-run.mjs  mini-bench-run.py  mini-bench-setup.mjs  mini-bench-setup.py  mini-bench.sh  push-sprint0-branch.ps1  setup-git-hooks.ps1  setup-git-hooks.sh
src/: lib.rs  main.rs  schema.sql
tests/: airgap_extraction.rs  assertions.rs  beir_eval.rs  chunking.rs  cli_call_dispatch_parity.rs  cli_collection_add.rs  cli_collection_ignore.rs  cli_collection_platform_gates.rs  cli_collection_reset.rs  cli_collection_routing.rs  cli_collection_sync.rs  cli_collection_truth_add.rs  cli_collection_truth_audit.rs  cli_collection_truth_info.rs  cli_collection_truth_list.rs  cli_collection_truth_migrate_uuids.rs  cli_collection_truth_quarantine.rs  cli_collection_truth_remap.rs  cli_collection_truth_restore.rs  cli_collection_truth_slug_routing.rs  cli_collection_truth_sync.rs  cli_embed_batching.rs  cli_extract.rs  cli_extraction.rs  cli_init_defaults.rs  cli_json_flag.rs  cli_migrate_db.rs  cli_model_pin.rs  cli_put_create.rs  cli_put_immediate_txn.rs  cli_put_render.rs  cli_put_source_invariants.rs  cli_put_supersede.rs  cli_put_update_occ.rs  cli_sync_inline_embed.rs  collection_cli_truth.rs  command_surface_coverage.rs  concurrency_cross_process.rs  concurrency_stress.rs  conflict_error_prefix.rs  (+119 more)
website/: .gitignore  DESIGN.md  SITE.md  astro.config.mjs  next-prompt.md  package-lock.json  package.json  pnpm-lock.yaml  stitch.json
(+630 files in other folders)
