[package]
name = "quaid"
version = "0.11.0"
edition = "2021"
description = "Local-first personal memory. SQLite + FTS5 + local vector embeddings. One static binary."
license = "MIT"
repository = "https://github.com/quaid-app/quaid"
readme = "README.md"
keywords = ["knowledge-base", "sqlite", "embeddings", "mcp", "rag"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "quaid"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database — bundled = SQLite compiled into binary, no system dependency
rusqlite = { version = "0.31", features = ["bundled"] }

# sqlite-vec — vector search as a SQLite extension, statically linked
sqlite-vec = "0.1"

# Embeddings — pure Rust ML framework, no ONNX runtime, true static linking
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.4"
tokenizers = "0.20"

# Model download for the online channel
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

# MCP server (stdio transport, JSON-RPC 2.0)
rmcp = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = "0.11"

# Regex
regex = "1"

# Async runtime (required by rmcp)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# SHA-256 for content hashing (idempotency keys, chunk dedup)
sha2 = "0.10"
hex = "0.4"

# UUID for import batch IDs
uuid = { version = "1", features = ["v4", "v7"] }
dirs = "6.0.0"

# Filesystem watching and ignore patterns
ignore = "0.4"
globset = "0.4"
notify = { version = "6", features = ["macos_fsevent"] }

# Unix fd-relative syscalls for path-traversal safety
[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

[features]
default = ["bundled", "embedded-model"]
bundled = ["rusqlite/bundled"]
# embedded-model: include_bytes!() BGE-small assets into the binary for the airgapped release channel
embedded-model = []
# online-model: online release channel; download BGE-small assets on first semantic use
online-model = ["dep:reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
