[package]
name = "quaid"
version = "0.23.0"
edition = "2021"
description = "Local-first personal memory. SQLite + FTS5 + local vector embeddings. One static binary."
license = "MIT"
repository = "https://github.com/quaid-app/quaid"
readme = "README.md"
keywords = ["knowledge-base", "sqlite", "embeddings", "mcp", "rag"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "quaid"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database — bundled = SQLite compiled into binary, no system dependency.
# `hooks` unlocks deterministic commit-failure injection for the queue
# transaction-recovery test in core::conversation::queue::tests.
rusqlite = { version = "0.31", features = ["bundled", "hooks"] }

# sqlite-vec — vector search as a SQLite extension, statically linked
sqlite-vec = "0.1"

# Embeddings + extraction — pure Rust ML framework, no ONNX runtime, true
# static linking. 0.10.x ships `models::quantized_qwen3` (GGUF Q4_K/Q6_K) and
# `models::qwen3` (the Qwen3-Embedding decoder) used by the Qwen3 defaults.
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
safetensors = "0.4"
tokenizers = "0.21"

# Model download for the online channel
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
], optional = true }

# MCP server (stdio + opt-in SSE/HTTP transport, JSON-RPC 2.0)
rmcp = { version = "0.1", features = ["transport-sse-server"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown parsing
pulldown-cmark = "0.11"

# Regex
regex = "1"

# Async runtime (required by rmcp)
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# SHA-256 for content hashing (idempotency keys, chunk dedup)
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"

# UUID for import batch IDs
uuid = { version = "1", features = ["v4", "v7"] }
dirs = "6.0.0"

# Filesystem watching and ignore patterns
ignore = "0.4"
globset = "0.4"
notify = { version = "6", features = ["macos_fsevent"] }

# Unix fd-relative syscalls for path-traversal safety
[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "0.38", features = ["fs", "process"] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
serial_test = "3"
proptest = "1"

[features]
# Single channel (qwen3-models-airgapped §5): "airgapped" now means local-only
# inference with a one-time provision-on-first-use download, not embedded
# weights. The former `embedded-model` (`include_bytes!`) channel is removed;
# the download channel (`online-model`) is the sole default. The feature flag
# is retained so a fully offline-stub build is still possible via
# `--no-default-features --features bundled`.
default = ["bundled", "online-model"]
bundled = ["rusqlite/bundled"]
# online-model: download/provision the configured model on first semantic use
online-model = ["dep:reqwest"]
# test-harness: enables in-library test fixtures (curated-alias stubs) for integration tests
test-harness = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "extraction"
harness = false

[lints.rust]
unsafe_code = "deny"
# missing_docs is enforced only on the library crate via `#![warn(missing_docs)]`
# in src/lib.rs — keeping the Cargo.toml entry off so integration tests, build.rs,
# and the bin target (which all live outside the spec's documentation scope per
# public-api-docs Requirement: Documentation scope boundary) aren't gated.
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
print_stdout = "warn"
redundant_clone = "warn"
needless_collect = "warn"
large_enum_variant = "warn"
